# simple_REST

./: db.sqlite3  pyproject.toml
myproject/: settings.py  urls.py
project1/: admin.py  models.py  serializer.py  urls.py  views.py
project1/migrations/: 0001_initial.py
